Bleep. Bloop. I am a bot.

--- a/FAQ.html
+++ b/FAQ.html
@@ -304,7 +304,7 @@ has the added benefit that your symbol definitions are in a standalone
 file instead of being buried inside your build definitions. An example
 can be found
 <a href="https://github.com/jpakkane/meson/tree/master/test%20cases/linuxlike/3%20linker%20script">here</a>.</p>
-<h2 id="my-project-works-fine-on-linux-and-mingw-but-fails-with-msvc-due-to-a-missing-lib-file">My project works fine on Linux and MinGW but fails with MSVC due to a missing .lib file</h2>
+<h2 id="my-project-works-fine-on-linux-and-mingw-but-fails-to-link-with-msvc-due-to-a-missing-lib-file-fatal-error-lnk1181-why">My project works fine on Linux and MinGW but fails to link with MSVC due to a missing .lib file (fatal error LNK1181). Why?</h2>
 <p>With GCC, all symbols on shared libraries are exported automatically
 unless you specify otherwise. With MSVC no symbols are exported by
 default. If your shared library exports no symbols, MSVC will silently
