Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -588,6 +588,12 @@ compiler being used:</p>
 <td> free-form comma-separated list</td>
 <td> Standard Windows libs to link against</td>
 </tr>
+<tr>
+<td> fortran_std</td>
+<td> none</td>
+<td> [none, legacy, f95, f2003, f2008, f2018]</td>
+<td> Fortran language standard to use</td>
+</tr>
 </tbody>
 </table>
 <p>The default values of <code>c_winlibs</code> and <code>cpp_winlibs</code> are in compiler-specific
