--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -2377,7 +2377,7 @@ not working correctly.</p>
 </li>
 <li>
 <p><code>get_variable(cmake : str, pkgconfig : str, configtool : str, default_value : str, pkgconfig_define : [str, str])</code> <em>(Added in
-0.51.0)</em> A generic variable getter method, which repalces the
+0.51.0)</em> A generic variable getter method, which replaces the
 get_<em>type</em>_variable methods. This allows one to get the variable
 from a dependency without knowing specifically how that dependency
 was found. If default_value is set and the value cannot be gotten
