Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -861,6 +861,10 @@ number, only the first occurrence of numbers separated by dots is kept.
 If the output is more complicated than that, the version checking will have to
 be done manually using <a href="Reference-manual.html#run_command"><code>run_command()</code></a>.</p>
 </li>
+<li>
+<p><code>dirs</code> <em>(since 0.53.0)</em> Extra list of absolute paths where to look for program
+names.</p>
+</li>
 </ul>
 <p>Meson will also autodetect scripts with a shebang line and run them
 with the executable/interpreter specified in it both on Windows
