--- a/Users.html
+++ b/Users.html
@@ -288,6 +288,8 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://git.gnome.org/browse/libgit2-glib">Libgit2-glib</a>, a GLib wrapper for libgit2</li>
 <li>
+<a href="https://gitlab.freedesktop.org/glvnd/libglvnd">libglvnd</a>, Vendor neutral OpenGL dispatch library for Unix-like OSes</li>
+<li>
 <a href="https://git.gnome.org/browse/libhttpseverywhere">Libhttpseverywhere</a>, a library to enable httpseverywhere on any desktop app</li>
 <li>
 <a href="https://github.com/fedora-modularity/libmodulemd">libmodulemd</a>, a GObject Introspected library for managing <a href="https://getfedora.org/">Fedora Project</a> module metadata.</li>
@@ -310,6 +312,8 @@ format files</li>
 <li>
 <a href="https://github.com/albfan/miraclecast">MiracleCast</a>, connect external monitors to your system via Wifi-Display specification aka Miracast</li>
 <li>
+<a href="https://github.com/emersion/mrsh">mrsh</a>, a minimal POSIX shell</li>
+<li>
 <a href="https://gitlab.gnome.org/GNOME/nautilus">Nautilus</a>, the GNOME file manager</li>
 <li>
 <a href="https://github.com/linuxmint/nemo">Nemo</a>, the file manager for the Cinnamon desktop environment</li>
@@ -325,6 +329,8 @@ format files</li>
 <a href="https://github.com/khaledhosny/ots">OTS</a>, the OpenType Sanitizer, parses and serializes OpenType files (OTF, TTF) and WOFF and WOFF2 font files, validating and sanitizing them as it goes. Used by Chromium and Firefox</li>
 <li>
 <a href="https://github.com/kerolasa/outlier">Outlier</a>, a small Hello World style meson example project</li>
+<li>
+<a href="https://git.archlinux.org/pacman.git/tree/">Pacman</a>, a package manager for Arch Linux</li>
 <li>
 <a href="https://git.gnome.org/browse/pango/">Pango</a>, an Internationalized text layout and rendering library (not the default yet)</li>
 <li>
