--- a/Native-environments.html
+++ b/Native-environments.html
@@ -195,6 +195,7 @@ like <code>llvm-config</code></p>
 c = '/usr/local/bin/clang'
 cpp = '/usr/local/bin/clang++'
 rust = '/usr/local/bin/rust'
+ld = 'gold'
 llvm-config = '/usr/local/llvm-svn/bin/llvm-config'
 </code></pre>
 <h3 id="paths-and-directories">Paths and Directories</h3>
