--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -279,6 +279,8 @@ build target (e.g. return value of <a href="Reference-manual.html#executable">ex
 <pre><code class="language-meson">    void assert(*condition*, *message*)
 </code></pre>
 <p>Abort with an error message if <code>condition</code> evaluates to <code>false</code>.</p>
+<p><em>Since 0.53.0</em> <code>message</code> argument is optional and defaults to print the condition
+statement instead.</p>
 <h3 id="benchmark">benchmark()</h3>
 <pre><code class="language-meson">    void benchmark(name, executable, ...)
 </code></pre>
