--- a/Fs-module.html
+++ b/Fs-module.html
@@ -199,19 +199,30 @@ md5, sha1, sha224, sha256, sha384, sha512.</p>
 <h3 id="size">size</h3>
 <p>The <code>fs.size(filename)</code> method returns the size of the file in integer bytes.
 Symlinks will be resolved if possible.</p>
-<h3 id="samefile">samefile</h3>
-<p>The <code>fs.samefile(filename1, filename2)</code> returns boolean <code>true</code> if the input filenames refer to the same file.
-For example, suppose filename1 is a symlink and filename2 is a relative path.
-If filename1 can be resolved to a file that is the same file as filename2, then <code>true</code> is returned.
-If filename1 is not resolved to be the same as filename2, <code>false</code> is returned.
-If either filename does not exist, an error message is raised.</p>
+<h3 id="is_samepath">is_samepath</h3>
+<p>The <code>fs.is_samepath(path1, path2)</code> returns boolean <code>true</code> if both paths resolve to the same path.
+For example, suppose path1 is a symlink and path2 is a relative path.
+If path1 can be resolved to path2, then <code>true</code> is returned.
+If path1 is not resolved to path2, <code>false</code> is returned.
+If path1 or path2 do not exist, <code>false</code> is returned.</p>
 <p>Examples:</p>
 <pre><code class="language-meson">x = 'foo.txt'
 y = 'sub/../foo.txt'
 z = 'bar.txt'  # a symlink pointing to foo.txt
+j = 'notafile.txt'  # non-existant file
 
-fs.samefile(x, y)  # true
-fs.samefile(x, z)  # true
+fs.is_samepath(x, y)  # true
+fs.is_samepath(x, z)  # true
+fs.is_samepath(x, j)  # false
+
+p = 'foo/bar'
+q = 'foo/bar/../baz'
+r = 'buz'  # a symlink pointing to foo/bar
+s = 'notapath'  # non-existant directory
+
+fs.is_samepath(p, q)  # true
+fs.is_samepath(p, r)  # true
+fs.is_samepath(p, s)  # false
 </code></pre>
 <h2 id="filename-modification">Filename modification</h2>
 <p>The files need not actually exist yet for this method, as it's just string manipulation.</p>
