--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -299,6 +299,42 @@ $('body').removeClass('no-script');
 </tr>
 </tbody>
 </table>
+<h2 id="linker-ids">Linker ids</h2>
+<p>These are return values of the <code>get_linker_id</code> (Linker family) method in a compiler object.</p>
+<table>
+<thead>
+<tr>
+<th> Value</th>
+<th> Linker family</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td> ld.bfd</td>
+<td> GNU Compiler Collection</td>
+</tr>
+<tr>
+<td> {ld.bfd,lld}</td>
+<td> Clang non-Windows</td>
+</tr>
+<tr>
+<td> link</td>
+<td> MSVC, Clang-cl, clang Windows</td>
+</tr>
+<tr>
+<td> pgi</td>
+<td> Portland/Nvidia PGI</td>
+</tr>
+<tr>
+<td> {ld.bfd,gold,xild}</td>
+<td> Intel compiler non-Windows</td>
+</tr>
+<tr>
+<td> xilink</td>
+<td> Intel-cl Windows</td>
+</tr>
+</tbody>
+</table>
 <h2 id="script-environment-variables">Script environment variables</h2>
 <table>
 <thead>
