Bleep. Bloop. I am a bot.

--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -444,6 +444,10 @@ set in the cross file.</p>
 <td> Renesas RX 32 bit MCU</td>
 </tr>
 <tr>
+<td> s390</td>
+<td> IBM zSystem s390</td>
+</tr>
+<tr>
 <td> s390x</td>
 <td> IBM zSystem s390x</td>
 </tr>
