--- a/Users.html
+++ b/Users.html
@@ -221,7 +221,7 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://wiki.gnome.org/Apps/Geary">Geary</a>, an email application built around conversations, for the GNOME 3 desktop.</li>
 <li>
-<a href="https://gitlab.gnome.org/GNOME/glib">GLib</a>, cross-platform C library used by GTK+ and GStreamer (not the default yet)</li>
+<a href="https://gitlab.gnome.org/GNOME/glib">GLib</a>, cross-platform C library used by GTK+ and GStreamer</li>
 <li>
 <a href="https://gitlab.gnome.org/GNOME/gnome-boxes">GNOME Boxes</a>, a GNOME hypervisor</li>
 <li>
@@ -243,7 +243,7 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://git.gnome.org/browse/grilo">Grilo</a> and <a href="https://git.gnome.org/browse/grilo-plugins">Grilo plugins</a>, the Grilo multimedia framework</li>
 <li>
-<a href="https://cgit.freedesktop.org/gstreamer/gstreamer/">GStreamer</a>, multimedia framework (not the default yet)</li>
+<a href="https://cgit.freedesktop.org/gstreamer/gstreamer/">GStreamer</a>, multimedia framework</li>
 <li>
 <a href="https://gitlab.gnome.org/GNOME/gtk">GTK+</a>, the multi-platform toolkit used by GNOME</li>
 <li>
@@ -324,7 +324,7 @@ format files</li>
 <li>
 <a href="https://github.com/OpenHMD/OpenHMD">OpenHMD</a>, a free and open source API and drivers for immersive technology, such as head mounted displays with built in head tracking</li>
 <li>
-<a href="http://cgit.freedesktop.org/gstreamer/orc/">Orc</a>, the Optimized Inner Loop Runtime Compiler (not the default yet)</li>
+<a href="http://cgit.freedesktop.org/gstreamer/orc/">Orc</a>, the Optimized Inner Loop Runtime Compiler</li>
 <li>
 <a href="https://github.com/khaledhosny/ots">OTS</a>, the OpenType Sanitizer, parses and serializes OpenType files (OTF, TTF) and WOFF and WOFF2 font files, validating and sanitizing them as it goes. Used by Chromium and Firefox</li>
 <li>
@@ -332,7 +332,7 @@ format files</li>
 <li>
 <a href="https://git.archlinux.org/pacman.git/tree/">Pacman</a>, a package manager for Arch Linux</li>
 <li>
-<a href="https://git.gnome.org/browse/pango/">Pango</a>, an Internationalized text layout and rendering library (not the default yet)</li>
+<a href="https://git.gnome.org/browse/pango/">Pango</a>, an Internationalized text layout and rendering library</li>
 <li>
 <a href="https://github.com/jpakkane/parzip">Parzip</a>, a multithreaded reimplementation of Zip</li>
 <li>
@@ -372,7 +372,7 @@ format files</li>
 <li>
 <a href="https://github.com/valum-framework/valum">Valum</a>, a micro web framework written in Vala</li>
 <li>
-<a href="https://lists.freedesktop.org/archives/wayland-devel/2016-November/031984.html">Wayland and Weston</a>, a next generation display server (not merged yet)</li>
+<a href="https://github.com/wayland-project/wayland">Wayland</a> and <a href="https://github.com/wayland-project/weston">Weston</a>, a next generation display server</li>
 <li>
 <a href="https://github.com/swaywm/wlroots">wlroots</a>, a modular Wayland compositor library</li>
 <li>
