Bleep. Bloop. I am a bot.

--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@ code.</p>
 <li>built-in multiplatform dependency provider that works together with distro packages</li>
 <li>fun!</li>
 </ul>
+<h2 id="a-full-manual">A full manual</h2>
+<p>The documentation on this site is freely available for all. However
+there is also a full separate manual available for purchase <a href="https://meson-manual.com/">on this
+web page</a>.</p>
 <h2 id="community">Community</h2>
 <p>There are two main methods of connecting with other Meson
 developers. The first one is the mailing list, which is hosted at
