--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -404,6 +404,10 @@ set in the cross file.</p>
 <td> Itanium processor</td>
 </tr>
 <tr>
+<td> m68k</td>
+<td> Motorola 68000 processor</td>
+</tr>
+<tr>
 <td> microblaze</td>
 <td> MicroBlaze processor</td>
 </tr>
