--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1700,14 +1700,17 @@ system. This object is always mapped in the <code>meson</code> variable. It has
 the following methods.</p>
 <ul>
 <li>
-<p><code>add_dist_script(script_name, arg1, arg, ...)</code> causes the script given as argument to run during
-<code>dist</code> operation after the distribution source has been generated
-but before it is archived. Note that this runs the script file that
-is in the <em>staging</em> directory, not the one in the source
-directory. If the script file can not be found in the staging
-directory, it is a hard error. This command can only invoked from
-the main project, calling it from a subproject is a hard
-error. Available since 0.48.0. Before 0.49.0, the function only accepted a single argument.</p>
+<p><code>add_dist_script(script_name, arg1, arg, ...)</code> causes the script
+given as argument to run during <code>dist</code> operation after the
+distribution source has been generated but before it is
+archived. Note that this runs the script file that is in the
+<em>staging</em> directory, not the one in the source directory. If the
+script file can not be found in the staging directory, it is a hard
+error. This command can only invoked from the main project, calling
+it from a subproject is a hard error. Available since 0.48.0. Before
+0.49.0, the function only accepted a single argument. Since 0.54.0
+the <code>MESON_SOURCE_ROOT</code> and <code>MESON_BUILD_ROOT</code> environment variables
+are set when dist scripts are run.</p>
 </li>
 <li>
 <p><code>add_install_script(script_name, arg1, arg2, ...)</code> causes the script
