Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1250,11 +1250,15 @@ them for the default behaviour for each platform.</p>
 <pre><code class="language-meson">    void message(text)
 </code></pre>
 <p>This function prints its argument to stdout.</p>
+<p><strong>Since 0.54.0</strong> Can take more more than one argument that will be separated by
+space.</p>
 <h3 id="warning">warning()</h3>
 <pre><code class="language-meson">    void warning(text)
 </code></pre>
 <p>This function prints its argument to stdout prefixed with WARNING:.</p>
 <p><em>Added 0.44.0</em></p>
+<p><strong>Since 0.54.0</strong> Can take more more than one argument that will be separated by
+space.</p>
 <h3 id="summary">summary()</h3>
 <pre><code class="language-meson">    void summary(key, value)
     void summary(dictionary)
