--- a/Release-procedure.html
+++ b/Release-procedure.html
@@ -172,24 +172,43 @@ $('body').removeClass('no-script');
         <h1 id="release-procedure">Release procedure</h1>
 <p><strong>This page is WIP. The following procedure is not yet approved for use</strong></p>
 <h1 id="trunk">Trunk</h1>
-<p>Meson operates under the principle that trunk should (in theory) be always good enough for release. That is, all code merged in trunk must pass all unit tests. Any broken code should either be fixed or reverted immediately.</p>
-<p>People who are willing to tolerate the occasional glitch should be able to use Meson trunk for their day to day development if they so choose.</p>
+<p>Meson operates under the principle that trunk should (in theory) be always
+good enough for release. That is, all code merged in trunk must pass all unit
+tests. Any broken code should either be fixed or reverted immediately.</p>
+<p>People who are willing to tolerate the occasional glitch should be able to
+use Meson trunk for their day to day development if they so choose.</p>
 <h1 id="major-releases">Major releases</h1>
-<p>Major releases are currently in the form 0.X.0, where X is an increasing number. We aim to do a major release roughly once a month, though the schedule is not set in stone. Prior to the release there is a stabilisation period of roughly a week. Major changes should not be committed during this time, but instead only small scale fixes.</p>
+<p>Major releases are currently in the form 0.X.0, where X is an increasing
+number. We aim to do a major release roughly once a month, though the
+schedule is not set in stone.</p>
+<p>Before a major release is made a stable branch will be made, and 0.X.0-rc1
+release candidate will be made. A new milestone for 0.X.0 will be made, and
+all bugs effecting the RC will be assigned to this milestone. Patches fixing
+bugs in the milestone will be picked to the stable branch, and normal
+development will continue on the master branch. Every week after after this a
+new release candidate will be made until all bugs are resolved in that
+milestone. When all of the bugs are fixed the 0.X.0 release will be made.</p>
 <h1 id="bugfix-releases">Bugfix releases</h1>
-<p>Bugfix releases contain only minor fixes to major releases and are designated by incrementing the last digit of the version number. The criteria for a bug fix release is one of the following:</p>
+<p>Bugfix releases contain only minor fixes to major releases and are designated
+by incrementing the last digit of the version number. The criteria for a bug
+fix release is one of the following:</p>
 <ul>
-<li>release has a major regression compared to the previous release (making existing projects unbuildable)</li>
+<li>release has a major regression compared to the previous release (making
+existing projects unbuildable)</li>
 <li>the release has a serious bug causing data loss or equivalent</li>
 <li>other unforeseen major issue</li>
 </ul>
-<p>In these cases a bug fix release can be made. It shall contain <em>only</em> the fix for the issue (or issues) in question and other minor bug fixes. Only changes that have already landed in trunk will be considered for inclusion. No new functionality shall be added.</p>
+<p>In these cases a bug fix release can be made. It shall contain <em>only</em> the fix
+for the issue (or issues) in question and other minor bug fixes. Only changes
+that have already landed in trunk will be considered for inclusion. No new
+functionality shall be added.</p>
 <h1 id="requesting-a-bug-fix-release">Requesting a bug fix release</h1>
 <p>The process for requesting that a bug fix release be made goes roughly as follows:</p>
 <ul>
 <li>file a bug about the core issue</li>
 <li>file a patch fixing it if possible</li>
-<li>contact the development team and request a bug fix release (IRC is the preferred contact medium)</li>
+<li>contact the development team and request a bug fix release (IRC is the
+preferred contact medium)</li>
 </ul>
 <p>The request should contain the following information:</p>
 <ul>
@@ -199,7 +218,10 @@ $('body').removeClass('no-script');
 </ul>
 <p>There is no need to write a long and complicated request report. Something like the following is sufficient:</p>
 <blockquote>
-<p>The latest release has a regression where trying to do Foo using Bar breaks. This breaks all projects that use both, which includes at least [list of affected projects]. This causes problems for X amount of people and because of this we should do a bugfix release.</p>
+<p>The latest release has a regression where trying to do Foo using Bar
+breaks. This breaks all projects that use both, which includes at least [list
+of affected projects]. This causes problems for X amount of people and
+because of this we should do a bugfix release.</p>
 </blockquote>
 
     </div>
